--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
     <!-- Google Fonts -->
-    <title>Vite + React</title>
+    <title>Devfolio</title>
     <script
       src="https://kit.fontawesome.com/0b3822e720.js"
       crossorigin="anonymous"
